kubernetes/backend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend-service
spec:
  type: NodePort
  selector:
    app: ezrent-back
  ports:
  - protocol: TCP
    port: 8443
