kubernetes/frontend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
spec:
  selector:
    app: ezrent-front
  ports:
  - protocol: TCP
    port: 3000
